--- a/src/main/java/gui/staff/administrator/jFrameAddStaff.form
+++ b/src/main/java/gui/staff/administrator/jFrameAddStaff.form
@@ -175,11 +175,13 @@
                           <Component id="jTextFieldFullName" alignment="3" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jLabelDateOfBirth" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jSpinnerDayBirth" alignment="3" max="32767" attributes="0"/>
-                          <Component id="jComboBoxMonthBirth" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="jSpinnerYearBirth" alignment="1" max="32767" attributes="0"/>
+                          <Group type="103" groupAlignment="3" attributes="0">
+                              <Component id="jLabelDateOfBirth" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="jSpinnerDayBirth" alignment="3" max="32767" attributes="0"/>
+                              <Component id="jComboBoxMonthBirth" alignment="3" min="-2" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
